new notebooks to calculate naive forecasting with pandas

--- a/SequenceModelsTimeSeries/recurrent_neural_networks.ipynb
+++ b/SequenceModelsTimeSeries/recurrent_neural_networks.ipynb
@@ -169,6 +169,18 @@
    "id": "d2c0ebf12adcf4e"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### how recurrent neural network works?\n",
+    "the neurons have the weights of the previous output and input and so on, so if we call to input weights as Wx and output weights Wy,\n",
+    "the formula the neuron uses is the next: **activation(WxT * x + WyT * y + b)**"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8c019a09df590c5c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [
@@ -216,7 +228,6 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T10:45:38.051168Z",
      "start_time": "2023-11-01T10:45:37.891048700Z"
     }
    },
